Cart & wishlist enhancements (in progress)

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -503,11 +503,11 @@
             <smart-label asp-for="IsShippingEnabled" />
         </div>
         <div class="adminData">
-            <input asp-for="IsShippingEnabled" data-toggler-for="#pnlIsShipEnabled" />
+            <input asp-for="IsShippingEnabled" data-toggler-for="#pnlShippingEnabled" />
             <span asp-validation-for="IsShippingEnabled"></span>
         </div>
     </div>
-    <div id="pnlIsShipEnabled">
+    <div id="pnlShippingEnabled">
         <div class="adminRow">
             <div class="adminTitle">
                 <smart-label asp-for="DeliveryTimeId" />
